# anti-api

./: .gitignore  Dockerfile  README.md  anti-api-start.bat  anti-api-start.command  docker-compose.yml  package.json  start.bat  start.command
public/: quota.html  remote.html  routing.html
rust-proxy/: Cargo.toml
rust-proxy/src/: main.rs
scripts/: update-homebrew-formula.ts  update-winget-manifest.ts
src/: main.ts  server.ts
src/lib/: config.ts  error.ts  json-schema-cleaner.ts  logger.ts  rate-limiter.ts  retry.ts  rust-proxy.ts  state.ts  token-saver.ts  token.ts  validation.ts
src/proto/: encoder.ts
src/routes/auth/: route.ts
src/routes/images/: handler.ts  route.ts
src/routes/messages/: handler.ts
src/routes/openai/: handler.ts  types.ts
src/routes/routing/: route.ts
src/services/: account-selector.ts  quota-aggregator.ts  quota.ts  settings.ts  usage-tracker.ts
src/services/antigravity/: account-manager.ts  chat.ts  ide-switch.ts  image-generation.ts  login.ts  oauth.ts  project-id.ts  quota-fetch.ts
src/services/auth/: store.ts
src/services/codex/: chat.ts  oauth.ts
src/services/copilot/: chat.ts
src/services/routing/: model-aliases.ts  models.ts  router.ts
test/: antigravity-quota.test.ts  codex-tls.test.ts  copilot-tls.test.ts  credential-transfer-disabled.test.ts  flow-sticky.test.ts  ide-switch.test.ts  logger-context.test.ts  router-dynamic-official-model.test.ts  routing-404-cooldown.test.ts  routing-copilot-sync-route.test.ts  routing-models-dynamic.test.ts  routing-quota-cache.test.ts
